--- a/skillenza/.vscode/launch.json
+++ b/skillenza/.vscode/launch.json
@@ -1,11 +1,15 @@
 {
+	// Use IntelliSense to learn about possible attributes.
+	// Hover to view descriptions of existing attributes.
+	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+	"version": "0.2.0",
 	"configurations": [
+
 		{
-			"type": "java",
-			"name": "CodeLens (Launch) - solution",
+			"type": "node",
 			"request": "launch",
-			"mainClass": "solution",
-			"projectName": "skillenza_83483ce6"
+			"name": "Launch Program",
+			"program": "${workspaceFolder}/simpleTest.js"
 		}
 	]
 }
